@@ -31,8 +31,8 @@ dependencies {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
     implementation 'org.apache.logging.log4j:log4j-core:2.25.2'
-    implementation 'com.oracle.database.jdbc:ojdbc11:23.9.0.25.07'
-    implementation 'org.springframework:spring-jdbc:6.2.9'
+    implementation 'com.oracle.database.jdbc:ojdbc11:23.26.0.0.0'
+    implementation 'org.springframework:spring-jdbc:7.0.1'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
