@@ -1,3 +1,6 @@
+Dec 08, 2025
+  removed code dealing with obsolete field FULL_ANNOT.RELATIVE_TO
+
 Oct 23, 2025
   hpo-phenotype: updated obophenotype ontology to 2025-10-22 release
 
